tests/istio_testcases/example_policies/sidecar_examples_w_onlineboutique/sidecars-syntax-tests-scheme.yaml
resourceList:
  - ../online_boutique/new_online_boutique_manifests_istio/all_deployments.yaml
  - onlineboutique-services.yaml

networkConfigList:
  - name: sidecar1
    networkPolicyList:
      - general_sidecar_examples_from_istio_ref/istio-sidecar-1.yaml

  - name: sidecar2
    networkPolicyList:
      - general_sidecar_examples_from_istio_ref/istio-sidecar-2.yaml
    expectedWarnings: 3

  - name: sidecar3
    networkPolicyList:
      - general_sidecar_examples_from_istio_ref/istio-sidecar-3.yaml
    expectedWarnings: 2

  - name: onlineboutique-sidecars
    networkPolicyList:
      - onlineboutique-sidecars.yaml


# bad path tests:

  - name: invalid_host_1
    networkPolicyList:
      - invalid_sidecars/sidecar-invalid-host-1.yaml
    expectedError: 1

  - name: invalid_host_2
    networkPolicyList:
      - invalid_sidecars/sidecar-invalid-host-2.yaml
    expectedError: 1

  - name: invalid_host_3
    networkPolicyList:
      - invalid_sidecars/sidecar-invalid-host-3.yaml
    expectedError: 1

  - name: invalid_host_4
    networkPolicyList:
      - invalid_sidecars/sidecar-invalid-host-4.yaml
    expectedError: 1

  - name: invalid_host_5
    networkPolicyList:
      - invalid_sidecars/sidecar-invalid-host-5.yaml
    expectedError: 1

  - name: invalid_host_6
    networkPolicyList:
      - invalid_sidecars/sidecar-invalid-host-6.yaml
    expectedError: 1

  - name: invalid_host_7
    networkPolicyList:
      - invalid_sidecars/sidecar-invalid-host-7.yaml
    expectedError: 1

  - name: invalid_egress # empty_egress , ignored
    networkPolicyList:
      - invalid_sidecars/sidecar-invalid-egress.yaml

  - name: invalid_host_8
    networkPolicyList:
      - invalid_sidecars/sidecar-invalid-host-8.yaml
    expectedError: 1

  - name: invalid_host_9
    networkPolicyList:
      - invalid_sidecars/sidecar-invalid-host-9.yaml
    expectedError: 1

  - name: invalid_spec
    networkPolicyList:
      - invalid_sidecars/sidecar-missing-spec.yaml
    expectedError: 1
